dependency(Projekt-x): Add vite

--- a/paint.html
+++ b/paint.html
@@ -7,6 +7,6 @@
     <title>paint - Projekt-X</title>
 </head>
 <body>
-
+    <script type="module" src="scripts/editor.js"></script>
 </body>
 </html>
