feat(Projekt-x): Style the js-draw canvas
- Modify paint.html to include a wrapper div around where the editor will be initialized. This gives better control over its dimensions and centering.
- Update editor.js to initialize the js-draw editor within this new wrapper div and ensure target class is on this wrapper.
- Revise paint.css to style this wrapper, making it responsive. The js-draw editor itself will be configured to fill this wrapper.

--- a/paint.html
+++ b/paint.html
@@ -7,6 +7,10 @@
     <title>paint - Projekt-X</title>
 </head>
 <body>
+    <!-- Include a wrapper div around where the editor will be initialized.
+     This gives better control over its dimensions and centering. -->
+    <div id="editor-wrapper">
+        </div>
     <script type="module" src="scripts/editor.js"></script>
 </body>
 </html>
