--- a/paint.html
+++ b/paint.html
@@ -9,8 +9,23 @@
 <body>
     <!-- Include a wrapper div around where the editor will be initialized.
      This gives better control over its dimensions and centering. -->
-    <div id="editor-wrapper">
-        </div>
-    <script type="module" src="scripts/editor.js"></script>
+    <div id="editor-wrapper"></div>
+    <div class="js-draw-pen-controls">
+
+    <!-- <div class="slider-container">
+        <h4>JS-Draw Wavy Thickness Pen Controls</h4>
+        <label for="jsDrawThicknessAmplitude">Thickness Wave Amplitude:</label>
+        <input type="range" id="jsDrawThicknessAmplitude" min="0" max="20" value="2" step="0.5">
+    </div>
+    <div class="slider-container">
+        <label for="jsDrawThicknessFrequency">Thickness Wave Frequency:</label>
+        <input type="range" id="jsDrawThicknessFrequency" min="0.01" max="0.5" value="0.07" step="0.005">
+    </div>
+    <div class="slider-container">
+        <label for="jsDrawSpeedFactor">Speed Taper Factor:</label>
+        <input type="range" id="jsDrawSpeedFactor" min="0" max="0.1" value="0.02" step="0.001">
+    </div>
+</div> -->
+    <script type="module" src="scripts/editor.ts"></script>
 </body>
 </html>
