chore(Projekt-X): Remove useless files

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/home.css">
-  <title>home - Projekt-X</title>
+  <title>Home - Projekt-X</title>
 </head>
 <body>
   <div class="main">
-    <h1>~YO SARAJ3VO!</h1>
+    <h1>'SUP SARAJEVO!</h1>
     <section class="intro-message">
-      <h2>Own the Walls, Digitally.</h2>
-      <p>No art school rules here, just raw expression. We're dropping a <a href="paint.html"><strong>DIGITAL CANVAS</strong></a> for you to hit the streets of Sarajevo like never before. Forget the hassle with the five-oh and the rush of real-world sprays – this is your chance to <a href="paint.html"><strong>PAINT THE CITY WALLS AND FLOORS</strong></a> from your screen, no cops, no cleanup crews.</p>
-      <p>Sarajevo breathes art, you know? It's that wild mix of old-school grit and new-wave energy, powered by something unseen that vibrates through these streets and the trams that ride 'em. We're talking that raw, undeniable energy that runs deep in this city's veins.</p>
-      <p>So, for one week, leading up to the <a href="https://www.instagram.com/fasadafestival/?hl=en" target="_blank"><strong>SARAJEVO STREET ART FESTIVAL</strong></a>, this platform is your playground. Paint, express, make your mark. Save your creations, blast 'em on socials, or throw 'em into the public <a href="gallery.html"><strong>GALLERY</strong></a>. And here's the kicker: all your digital masterpieces are gonna get blasted across the city on **actual screens and billboards** during the festival. Yeah, your art, lit up for all of Sarajevo.</p>
-      <p>This is my shout-out to this city, to all of you who make it what it is. A chance for every voice to echo on these digital walls, to claim a piece of Sarajevo, loud and clear.</p>
-      <p>Let's go make noise!</p>
+      <h2>Release yo' self, digitally.</h2>
+      <p>No art school rules here, just raw expression. This is a <a href="paint.html"><strong>DIGITAL CANVAS</strong></a> for you to hit the streets of Sarajevo like never before. Forget the hassle with the authorities, or resident permission - <a href="paint.html"><strong>PAINT THE CITY WALLS AND FLOORS</strong></a> from your screens, no cops, no cleanup crews <a href="terms.html"><strong>NO DRAMA!</strong></a></p>
+      <p>Your city breathes art - the walls, the streets, the food, the people - they all have a vibe that inspires, fuels, and colours life in Sarajevo. It's something <a href="about.html"><strong>I</strong></a>'ve felt from day 1.</p>
+      <p>For one week, leading up to the <a href="https://www.instagram.com/fasadafestival/?hl=en" target="_blank"><strong>SARAJEVO STREET ART FESTIVAL</strong></a>, this platform is your playground. Paint, write, set your imagination free. Save your creations, share them with <strong>#sarajevostreetart</strong>, and add them to the public <a href="gallery.html"><strong>GALLERY</strong></a>. During the festival the gallery is going all across the city on **actual screens and billboards** during the festival. You'll light up all Sarajevo.</p>
+      <p>This is my respect to this city, to all you who make it what it is. A stage for every voice to be heard on the digital walls of Sarajevo</p>
+      <p>What are you waiting for?</p>
     </section>
   </div>
 </body>
