--- a/paint.html
+++ b/paint.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/paint.css">
-    <title>paint - Projekt-X</title>
+    <title>Paint - Projekt-X</title>
 </head>
 <body>
     <!-- Include a wrapper div around where the editor will be initialized.
