--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/gallery.css">
-    <title>gallery - Projekt-X</title>
+    <title>Gallery - Projekt-X</title>
 </head>
 <body>
 
