feat(Projekt-x): Add button and event listener for uploading to gallery

--- a/src/paint.html
+++ b/src/paint.html
@@ -11,7 +11,7 @@
      This gives better control over its dimensions and centering. -->
     <div id="editor-wrapper"></div>
     <div class="js-draw-pen-controls">
-
+    <button id="saveToGalleryButton">Save to Gallery</button>
     <!-- <div class="slider-container">
         <h4>JS-Draw Wavy Thickness Pen Controls</h4>
         <label for="jsDrawThicknessAmplitude">Thickness Wave Amplitude:</label>
