--- a/src/gallery.html
+++ b/src/gallery.html
@@ -7,6 +7,9 @@
     <title>Gallery - Projekt-X</title>
 </head>
 <body>
-
+    <h1>Gallery</h1>
+    <div id="gallery-container"></div>
+    <div id="pagination-controls"></div>
+    <script type="module" src="scripts/gallery.js"></script>
 </body>
 </html>
