fix(Projekt-x): Uploaded images on admin page
- Modify the admin route in server.js
- Uploaded images are now displayed on the admin page and can be approved/denied.
- Move .html pages to project root and update their scripts paths.
- Seems there was a conflict with the files in the docs folder and the running fo the server. Moved docs out.

--- a/gallery.html
+++ b/gallery.html
@@ -10,6 +10,6 @@
     <h1>Gallery</h1>
     <div id="gallery-container"></div>
     <div id="pagination-controls"></div>
-    <script type="module" src="scripts/gallery.js"></script>
+    <script type="module" src="src/scripts/gallery.js"></script>
 </body>
 </html>
