--- a/paint.html
+++ b/paint.html
@@ -26,6 +26,6 @@
         <input type="range" id="jsDrawSpeedFactor" min="0" max="0.1" value="0.02" step="0.001">
     </div>
 </div> -->
-    <script type="module" src="scripts/editor.ts"></script>
+    <script type="module" src="src/scripts/editor.ts"></script>
 </body>
 </html>
