docs(Projekt-x): Update TODO, index, and about

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
     <hr> <section class="contact-section">
       <h2>Get in Touch</h2>
-      <p>Have questions, feedback, or just want to say 'sup'?</p>
+      <p>Have questions, feedback, or just say what's up?</p>
 
       <form action="#" method="POST" class="contact-form">
         <div class="form-group">
