--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
   <div class="main">
     <h1>'SUP SARAJEVO!</h1>
     <section class="intro-message">
-      <h2>Release yo' self, digitally.</h2>
-      <p>No art school rules here, just raw expression. This is a <a href="paint.html"><strong>DIGITAL CANVAS</strong></a> for you to hit the streets of Sarajevo like never before. Forget the hassle with the authorities, or resident permission - <a href="paint.html"><strong>PAINT THE CITY WALLS AND FLOORS</strong></a> from your screens, no cops, no cleanup crews <a href="terms.html"><strong>NO DRAMA!</strong></a></p>
+      <p>The city is now a <strong>DIGITAL CANVAS</strong>. No hassle with the authorities, or resident permission, <strong>"PAINT" THE CITY WALLS, FLOORS, TRAMS...</strong> from your screens, no cops, no cleanup, <a href="terms.html"><strong>SOME RULES APPLY</strong></a> so we have no drama.</p>
       <p>Your city breathes art - the walls, the streets, the food, the people - they all have a vibe that inspires, fuels, and colours life in Sarajevo. It's something <a href="about.html"><strong>I</strong></a>'ve felt from day 1.</p>
-      <p>For one week, leading up to the <a href="https://www.instagram.com/fasadafestival/?hl=en" target="_blank"><strong>SARAJEVO STREET ART FESTIVAL</strong></a>, this platform is your playground. Paint, write, set your imagination free. Save your creations, share them with <strong>#sarajevostreetart</strong>, and add them to the public <a href="gallery.html"><strong>GALLERY</strong></a>. During the festival the gallery is going all across the city on **actual screens and billboards** during the festival. You'll light up all Sarajevo.</p>
-      <p>This is my respect to this city, to all you who make it what it is. A stage for every voice to be heard on the digital walls of Sarajevo</p>
+      <p>For one week, leading up to the <a href="https://www.instagram.com/fasadafestival/?hl=en" target="_blank"><strong>SARAJEVO STREET ART FESTIVAL</strong></a>, photograph and unleash your creativity <a href="paint.html"><strong>HERE</strong></a>. Save your creations - share them with <strong>#sarajevostreetart</strong>, and add them to the public <a href="gallery.html"><strong>GALLERY</strong></a>. During festival week the gallery is going all across the city on **screens and billboards**, lighting up Sarajevo.</p>
+      <p>This is my respect to this city, to all you who make it what it is - express yourself, and leave no surface behind.</p>
       <p>What are you waiting for?</p>
     </section>
   </div>
