--- a/gallery.html
+++ b/gallery.html
@@ -7,9 +7,10 @@
     <title>Gallery - Projekt-X</title>
 </head>
 <body>
-    <h1>Gallery</h1>
-    <div id="gallery-container"></div>
-    <div id="pagination-controls"></div>
+    <div class="main">
+        <div id="gallery-container"></div>
+        <div id="pagination-controls"></div>
+    </div>
     <script type="module" src="src/scripts/gallery.js"></script>
 </body>
 </html>
