docs(Project-x): Revise wording in README.md and About

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
     <section class="about-section">
       <h2>Vision</h2>
-      <p>Projekt-X project a passion project born from a deep appreciation for Sarajevo's vibrant artistic soul. Inspired by the city's unique blend of history, culture, and street art, this digital canvas has been created to empower voices and celebrate creativity without boundaries. For one week, leading up to the Sarajevo Street Art Festival, this platform transforms digital walls into a public exhibition, showcasing the raw, unfiltered expression of its people. - Jaseen</p>
+      <p>Projekt-X project a passion project born from a deep appreciation for Sarajevo's vibrant artistic soul. Inspired by the city's unique blend of history, culture, and street art, this digital canvas has been created to empower voices and celebrate creativity without boundaries. For one week, leading up to the Sarajevo Street Art Festival, this platform digitally transforms the city's surfaces into a public exhibition, showcasing the raw, unfiltered expression of its people. - Jaseen</p>
     </section>
 
     <hr> <section class="contact-section">
